--- a/hibernate/hib000/.classpath
+++ b/hibernate/hib000/.classpath
@@ -12,5 +12,8 @@
 	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hib01/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/mysql/mysql-connector-java-5.1.25-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hibernate3-log4j所有包/log4j-1.2.11.jar"/>
+	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hibernate3-log4j所有包/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hibernate3-log4j所有包/slf4j-log4j12-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
