--- a/hibernate/hib000/.classpath
+++ b/hibernate/hib000/.classpath
@@ -2,18 +2,18 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hib01/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hib01/commons-collections-3.1.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hib01/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hib01/hibernate3.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hib01/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hib01/javassist-3.12.0.GA.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hib01/jta-1.1.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hib01/slf4j-api-1.6.1.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/mysql/mysql-connector-java-5.1.25-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hibernate3-log4j所有包/log4j-1.2.11.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hibernate3-log4j所有包/slf4j-api-1.6.1.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/eclipse/jee-neon/eclipse/workspace/lib/hibernate3-log4j所有包/slf4j-log4j12-1.6.1.jar"/>
+	<classpathentry kind="lib" path="E:/fulq/mystudy/mystudy/hibernate/lib/hibernate3-log4j所有包/log4j-1.2.11.jar"/>
+	<classpathentry kind="lib" path="E:/fulq/mystudy/mystudy/hibernate/lib/hibernate3-log4j所有包/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="E:/fulq/mystudy/mystudy/hibernate/lib/hibernate3-log4j所有包/slf4j-log4j12-1.6.1.jar"/>
+	<classpathentry kind="lib" path="E:/fulq/mystudy/mystudy/hibernate/lib/hib01/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="E:/fulq/mystudy/mystudy/hibernate/lib/hib01/commons-collections-3.1.jar"/>
+	<classpathentry kind="lib" path="E:/fulq/mystudy/mystudy/hibernate/lib/hib01/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="E:/fulq/mystudy/mystudy/hibernate/lib/hib01/hibernate3.jar"/>
+	<classpathentry kind="lib" path="E:/fulq/mystudy/mystudy/hibernate/lib/hib01/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="E:/fulq/mystudy/mystudy/hibernate/lib/hib01/javassist-3.12.0.GA.jar"/>
+	<classpathentry kind="lib" path="E:/fulq/mystudy/mystudy/hibernate/lib/hib01/jta-1.1.jar"/>
+	<classpathentry kind="lib" path="E:/fulq/mystudy/mystudy/hibernate/lib/hib01/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="E:/fulq/mystudy/mystudy/hibernate/lib/mysql/mysql-connector-java-5.1.25-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
